[gd_scene load_steps=2 format=3 uid="uid://dcqsy6vwxhbwq"]

[ext_resource type="Script" uid="uid://cc7673fnl3sy4" path="res://Scripts/Interface/MainMenu.gd" id="1_buu5b"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_buu5b")

[node name="background" type="ColorRect" parent="."]
layout_mode = 1

[node name="title" type="Label" parent="."]
layout_mode = 0
offset_right = 1.0
offset_bottom = 23.0

[node name="continue_button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -576.0
offset_right = -568.0
offset_bottom = 8.0
grow_horizontal = 2

[node name="new_game_button" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="load_game_button" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="options_button" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="exit_button" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[connection signal="pressed" from="new_game_button" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="load_game_button" to="." method="_on_load_game_pressed"]
[connection signal="pressed" from="exit_button" to="." method="_on_exit_pressed"]
